Fixes on mobile

--- a/src/components/case-study-section/case-study-4/index.module.scss
+++ b/src/components/case-study-section/case-study-4/index.module.scss
@@ -25,6 +25,7 @@ $arrowHeight: 255px;
 
   @include media-breakpoint-down(md) {
     padding: 24px 32px;
+    margin-bottom: 40px;
   }
 }
 
