--- a/src/styles/current/_variables.scss
+++ b/src/styles/current/_variables.scss
@@ -59,6 +59,7 @@ $input-focus-color: #000;
 $input-placeholder-color: rgba(0, 0, 0, 0.5);
 $input-btn-focus-box-shadow: none;
 $input-btn-padding-x: 0;
+$input-border-radius: 0;
 
 // Label
 
